--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
         <!--===== FOOTER =====-->
         <footer class="footer">
-            <p class="footer__title">Created by Katrina Sudario</p>
+            <p class="footer__title"><center>Created by Katrina Sudario</center></p>
         </footer>
 
 
