adds link to work

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
 
             <!--===== WORK =====-->
-            <section class="about section " id="about">
+            <section class="about section " id="work">
                 <h2 class="section-title">Relevant Technical Projects</h2>
 
                 <div class="about__container bd-grid">
